src/objects/dupcheck__dcIndex__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__RecordType__c</fullName>
        <externalId>true</externalId>
        <label>Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__index__c</fullName>
        <label>Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__objectPrefix__c</fullName>
        <externalId>true</externalId>
        <label>Object Prefix</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__personAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__recordTypeId__c</fullName>
        <label>Record Type Id (Old)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Duplicate Check Index</label>
    <nameField>
        <label>DC Object Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplicate Check Indexes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>